public/modules/core/css/core.css
h1 {
	margin: 40px 0 30px 0;
}

h2 {
	font-size: 20px;
}

p {
	text-align: justify;
}

footer {
	margin-top: 10px;
}
footer > div {
	border-top: 1px solid #eee;
	padding: 20px 0;
}

img.grayscale, input[type="image"].grayscale {
	filter: grayscale(1);
	-webkit-filter: grayscale(1);
	-moz-filter: grayscale(1);
	-o-filter: grayscale(1);
	-ms-filter: grayscale(1);
}

form.in-form {
	display: inline-block;
}

.content {
	margin-top: 50px;
}
.undecorated-link:hover {
	text-decoration: none;
}
[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
	display: none !important;
}
.ng-invalid.ng-dirty {
	border-color: #FA787E;
}
.ng-valid.ng-dirty {
	border-color: #78FA89;
}

span.flag-gb {
	content:url('/images/gb.png');
	margin-right: 10px;
}
span.flag-be {
	content:url('/images/be.png');
	margin-right: 10px;
}

